fix static urls

--- a/public/assets/app/index.html
+++ b/public/assets/app/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<iframe id="main_iframe" src="//app.robotbulls.com/" frameborder="0" style="position: absolute; margin-top: env(safe-area-inset-top);width: 100vw;height: calc(100vh - env(safe-area-inset-top));top:0;left:0;"></iframe>
+<iframe id="main_iframe" src="/" frameborder="0" style="position: absolute; margin-top: env(safe-area-inset-top);width: 100vw;height: calc(100vh - env(safe-area-inset-top));top:0;left:0;"></iframe>
 
     <script>
         document.getElementById('main_iframe').onload = function() {
